--- a/src/app/authorization-page/authentification-page/authentification-page.component.html
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.html
@@ -20,11 +20,11 @@
         </h2>
         <p>
           <span class='registr-txt'>Добро пожаловать на лучшую платформу фриланса Who can!</span>
-          <span class='login-txt'>Будем рады видеть вас снова!</span>
+          <span class='login-txt'>Будем рады видеть вас снова на лучшей платформе фриланса Whocan</span>
         </p>
         <button mat-button class='swap-btn' type="button" (click)="swipeBtn()" [ngClass]="auth? 'login-btn': 'registr-btn'" >
           <span class='login-btn-txt'>Войти</span>
-          <span class='registr-btn-txt'>Хочу зарегистрироваться</span>
+          <span class='registr-btn-txt'>Зарегистрироваться</span>
         </button>
       </div>
 
