--- a/src/app/chat/components/collocutors-list/projects-filter/projects-filter.component.html
+++ b/src/app/chat/components/collocutors-list/projects-filter/projects-filter.component.html
@@ -1,7 +1,8 @@
-<div class="filters" >
-  <div class="current {{ currentType }}"(click)="toggleListOfTypes()"
-   ><span>{{ currentTypeName}}</span> <span class="corner" [ngClass]="isListVisible? 'up': 'down'"></span></div>
-  <div class="types-list"  [ngClass]="{open: isListVisible=== true && isListVisible, 'hidden': isListVisible=== false && !isListVisible}">
+<div class="filters" (clickOutside)="hideMenu($event)">
+  <div class="current {{ currentType }}" (click)="toggleListOfTypes()"><span>{{ currentTypeName}}</span> <span
+      class="corner" [ngClass]="isListVisible? 'up': 'down'"></span></div>
+  <div class="types-list"
+    [ngClass]="{open: isListVisible=== true && isListVisible, 'hidden': isListVisible=== false && !isListVisible}">
     <ul>
       <li *ngFor="let el of projectTypes" class="{{ el.type }}" (click)="setProjectType(el.type, el.name)">
         {{ el.name }}
