--- a/src/app/authorization-page/authentification-page/authentification-page.component.scss
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.scss
@@ -177,7 +177,7 @@
       outline: none;
       cursor: pointer;
       font-family: 'Source Sans Pro', sans-serif;
-
+      text-transform: uppercase;
       span {
         outline: none;
       }
