--- a/src/app/chat/components/collocutor-information/collocutor-information.component.scss
+++ b/src/app/chat/components/collocutor-information/collocutor-information.component.scss
@@ -131,13 +131,30 @@
     }
   }
   button {
-    text-transform: none;
     font-family: "Source Sans Pro", sans-serif;
-    font-size: 14px;
+    font-size: 11px;
     font-weight: 800;
     letter-spacing: 1px;
     margin-left: auto;
     min-width: 120px;
     position: relative;
+    text-transform: uppercase;
+
+    position: relative;
+    &:after {
+      position: absolute;
+      content: '';
+      width: 5px;
+      height: 5px;
+      border-bottom: 2px solid #3C7EEA;
+      border-left: 2px solid #3C7EEA;
+      right: 20px;
+      top: 40%;
+      transform: rotate(-45deg) translateY(-50%);      
+    }
+    &.open:after {
+      transform: rotate(135deg) translateY(20%);
+    }
+    
   }
 }
