--- a/src/app/chat/components/messager/messager.component.scss
+++ b/src/app/chat/components/messager/messager.component.scss
@@ -23,6 +23,9 @@
     app-message-list {
       height: 100%;
     }
+    &.full {
+      height: 100%;
+    }
   }
   .message-input {
     box-shadow: 0px 15px 30px rgba(16, 27, 79, 0.15);
