--- a/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.scss
@@ -4,6 +4,20 @@
   display: flex;
   flex-direction: column;
   height: 97%;
+  position: relative;
+  &.modal {
+    &:before {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      background: rgba(224, 225, 249, 0.3);
+      backdrop-filter: blur(4px);
+      z-index: 15;
+    }
+  }
   .compressed-statistic {
     display: flex;
     flex-direction: row;
