--- a/src/app/dashboard-page/dashboard-pages/finace-page/components/user-finances/user-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/components/user-finances/user-finances.component.html
@@ -1,4 +1,4 @@
-<div class="user">
+<div class="user" *ngIf="userFinance" [ngClass]="paymentsFullSize? 'modal': ''" >
   <div class="statistic">
     <!-- User finance statistic -->
     <section class="compressed-statistic">
@@ -17,7 +17,7 @@
         <div class="title">мой доход <span> (UAH)</span></div>
         <app-diagram></app-diagram>
       </div>
-      <div class="calendar">
+      <div class="calendar" >
         <app-calendar [userFinance]="userFinance.history"></app-calendar>
         <div class="info">
           <div>
@@ -31,9 +31,9 @@
 
 
     </section>
-    <section class="paymenst">
+    <section class="paymenst" (clickOutside)="rollPaymentsList()" [ngClass]="paymentsFullSize? 'full-size': ''">
       <div class="title">
-        история платежей
+        <span>история платежей</span>  <span class="open" (click)="unrollPaymentsList()"></span>
       </div>
       <div class="paymenst-list">
         <div class="title">
@@ -72,12 +72,12 @@
       <div class="title">ввод и вывод денег</div>
       <div class="form">
         <div class="operation-type">
-          <mat-select [formControl]="deffaultSelect" [(ngModel)]="transactions.transactionType">
-            <mat-option [value]=null disabled>Выберите операцию</mat-option>
-            <mat-option [value]="'input'">
+          <mat-select [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType">
+            <mat-option [value]="null" disabled  >Выберите операцию</mat-option>
+            <mat-option value="'input'">
               Ввести деньги
             </mat-option>
-            <mat-option [value]="'output'">
+            <mat-option value="'output'">
               Вывести деньги
             </mat-option>
           </mat-select>
