--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
@@ -3,13 +3,15 @@
   overflow-x: hidden;
   height: 100%;
 
-  form{
+  form {
     display: flex;
     flex-direction: column;
     width: 77%;
-    &.package-options{
+
+    &.package-options {
       width: 100%;
     }
+
     .form-title {
       display: flex;
       justify-content: space-between;
@@ -188,7 +190,7 @@
       width: 90%;
       margin: auto;
       height: 90%;
-      padding: 10px;
+      // padding: 10px;
     }
 
     textarea {
@@ -198,6 +200,8 @@
       height: 100%;
       outline: none;
       width: 100%;
+      padding: 10px;
+      box-sizing: border-box;
     }
 
     .input-wrap {
@@ -703,11 +707,13 @@
             justify-content: flex-end;
           }
         }
+
         &.extra-option-preview {
           border-top: none;
           // border-bottom: 1px solid #dce0e6;
           padding: 0 18px 0 38px;
           width: auto;
+
           .select-wrap-extra {
             display: flex;
             align-items: center;
@@ -719,6 +725,7 @@
             line-height: 21px;
             color: #707683;
           }
+
           .price {
             display: flex;
             justify-content: space-around;
@@ -728,9 +735,10 @@
             font-size: 16px;
             line-height: 21px;
             color: #707683;
-             .money {
-               line-height: 20px;
-             }
+
+            .money {
+              line-height: 20px;
+            }
           }
         }
       }
@@ -823,10 +831,11 @@
           flex-direction: column;
           border-top: 1px solid #dce0e6;
           padding: 0;
+
           &.rolled {
-             .extra-option-preview {
-            border-bottom: 0;
-          }
+            .extra-option-preview {
+              border-bottom: 0;
+            }
           }
 
         }
@@ -835,6 +844,7 @@
           padding: 0;
           height: 0;
           overflow: hidden;
+
           &>div {
             display: flex;
             flex-direction: row;
@@ -902,6 +912,7 @@
               }
             }
           }
+
           &.expanded {
             padding: 20px 18px 20px 62px;
             height: auto;
@@ -910,4 +921,56 @@
       }
     }
   }
+
+// --------------------- popover ------------------
+
+ngb-popover-window {
+  &.popover {
+    background: #ffffff;
+    box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
+    border-radius: 8px;
+    padding: 18px 23px 19px 28px;
+    left: 14px !important;
+    top: -30px !important;
+    z-index: 2;
+    max-width: 323px;
+    z-index: 10;
+    &:before {
+      content: "";
+      position: absolute;
+      left: -9px;
+      top: 8px;
+      width: 22px;
+      height: 22px;
+      background: #ffffff;
+      -webkit-transform: rotate(47deg);
+      transform: rotate(47deg);
+      box-sizing: border-box;
+      z-index: -1;
+    }
+
+    h3 {
+      font-family: "Source Sans Pro", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      color: #000000;
+      margin: 0 0 12px;
+    }
+
+    .popover-body {
+      margin: 0;
+      font-family: "Source Sans Pro", sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 18px;
+      color: #707683;
+    }
+  }
 }
+
+
+}
+
+
