--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -112,7 +112,7 @@
     border-radius: 50%;
     position: relative;
     overflow: hidden;
-    margin-right: 50px;
+    margin-right: 60px;
     img {
       position: absolute;
       top: 50%;
@@ -128,7 +128,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-right: 125px;
+    margin-right: auto;
     .value {
       padding-left: 14px;
     }
@@ -273,6 +273,48 @@
         }
       }
     }
+  }
+}
+
+.switching-user-types{
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  .btns-wrapper{
+    display: flex;
+  }
+  .btn-user-type{
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: uppercase;
+    padding: 12px 20px;
+    height: max-content;  
+
+    background-color: #fff;
+    color: #3C7EEA;
+    border: 1px solid #3C7EEA;
+    margin-right: 15px;
+    box-sizing: border-box;
+
+    &.active{
+      background-color: #3C7EEA;
+      color: #fff;
+      box-sizing: border-box;
+      &:hover{
+        background-color: #5695fd;
+      }
+    }
+  }
+  &__text{
+    width: 50%;
+    font-family: 'Source Sans Pro';
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    color: #99ACB7;
   }
 }
 
