update rating + commnets, divide frilancer/customer

--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
@@ -58,7 +58,7 @@
     </div>
     <div class="info-item">
       <p class="title">Обращений в арбитраж</p>
-      <p class="text">{{ offerData.user.arbitration }}</p>
+      <p class="text">{{ offerData.user.arbitration.freelancer }}</p>
     </div>
     <div class="info-item">
       <p class="title">Проектов в работе</p>
