--- a/src/app/service-page/components/service-page-comments/service-page-comments.component.scss
+++ b/src/app/service-page/components/service-page-comments/service-page-comments.component.scss
@@ -48,11 +48,11 @@
     .left-side {
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
     }
     .ava {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       position: relative;
       overflow: hidden;
@@ -81,6 +81,10 @@
       cursor: pointer;
       color: #4e5051;
       text-decoration: none;
+      font-size: 18px;
+      line-height: 23px;
+      color: #4e5051;
+      font-weight: 600;
       &:hover{
         color: #5695FD;
       }
@@ -96,13 +100,17 @@
       font-size: 18px;
       line-height: 23px;
       color: #4e5051;
+      margin-top: 3px;
+      margin-bottom: 6px;
     }
-    // .publication_time{
-    //   font-weight: normal;
-    //   font-size: 16px;
-    //   line-height: 20px;
-    //   color: #99ACB7;
-    // }
+    .comment__date{
+      font-weight: normal;
+      font-size: 16px;
+      color: #99ACB7;
+      margin-left: 20px;
+      line-height: 18px;
+      margin-top: 5px;
+    }
     &:nth-child(odd) {
       background-color: #fbfcfd;
     }
@@ -121,6 +129,7 @@
         margin-right: 25px;
         span{
           padding-right: 7px;
+          color: #BDC3C7;
         }
       }
     }
