--- a/src/app/user-page/user-page-comments/user-page-comments.component.scss
+++ b/src/app/user-page/user-page-comments/user-page-comments.component.scss
@@ -134,8 +134,8 @@
     }
   }
   &__avatar {
-    min-width: 40px;
-    height: 40px;
+    min-width: 50px;
+    height: 50px;
     border-radius: 50%;
     position: relative;
     overflow: hidden;
@@ -174,6 +174,7 @@
     font-size: 16px;
     line-height: 20px;
     color: #99ACB7;
+    margin-top: 2px;
   }
   &__message{
     color: #4E5051;
