--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/pie-chart-dashboard/pie-chart-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/pie-chart-dashboard/pie-chart-dashboard.component.html
@@ -1,2 +1,6 @@
-<canvas baseChart [data]="data" width='310px' height='192px'
- [chartType]="pieChartType" ></canvas>
+<div [hidden]="!chart">
+ <canvas id="user-doughnut-chart" height='192px'></canvas>   
+</div>
+
+
+ <!-- width='310px' height='192px' -->
